# ow-camel-faiss-storage

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
ow-camel-faiss-storage/: __init__.py  faiss.py
