[project]
name = "ow-camel-faiss-storage"
version = "0.0.1"
description = "FAISS storage for CamelAI agents."
authors = [{ name = "OpenWorkspace-o1" }]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "camel-ai==0.2.36",
    "faiss-cpu==1.10.0",
    "langchain-core==0.3.47",
    "langchain==0.3.21",
    "langchain_community==0.3.20"
]

[project.urls]
Repository = "https://github.com/OpenWorkspace-o1/ow-camel-faiss-storage"
Documentation = "https://github.com/OpenWorkspace-o1/ow-camel-faiss-storage/blob/main/README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ow-camel-mem0-memory"]

[tool.hatch.metadata]
allow-direct-references = true
